# AgenticAI

./: .env.example  .gitignore  README.md  pyproject.toml
TP1_Prompt_Engineering/: 01_tokenisation.py  02_ollama_prompt.py  03_groq_prompt.py  04_openai_prompt.py  05_aspect_sentiment_json.py  06_image_generation.py  07_image_description.py  EXPLANATION.md  prompt.ipynb
TP2_Langchain/: .env.example  01_simple_agent.py  02_system_message_agent.py  03_few_shot_agent.py  04_structured_response_agent.py  05_basemodel_response_agent.py  06_tools_agent.py  07_web_search_agent.py  08_memory_agent.py  EXPLANATION.md  chef_personnel_agent.py  requirements.txt
TP3-RAG/: EXPLANATION.md  part1_rag_pdf.py  part2_sql_agent.py  requirements.txt
TP4_MCP/: .env.example  EXPLANATION.md  agentMCP.py  agentMCPDistant.py  agentMCPTime.py  mcp_http_server.py  mcp_local_server.py  pyproject.toml
TP5_LangGraph_Studio/: agent_simple.py  langgraph.json  pyproject.toml
TP6_état_contexte/: 01_context.py  02_state.py  EXPLANATION.md
TP7_Human_In_The_Loop/: agent_hitl.py
TP8_Workflow_avec_LangGraph/: EXPLANATION.md  conditional_workflow.py  hello_graph.py  langgraph.json  message_state.py  reducers_demo.py  two_step_workflow.py  workflow_loop.py
TP9_Agent_avec_LangGraph/: EXPLANATION.md  agent_node.py  hitl_workflow.py  langgraph.json  tools_setup.py  tp_agent.py
TP_chef_personnel/: EXPLANATION.md  chef_personnel_agent.py  requirements.txt
