[project]
name = "tp5-langgraph-studio"
version = "0.1.0"
description = "TP LangGraph Studio -- Agent avec LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-ollama",
    "langchain-community",
    "langgraph",
    "langgraph-cli[inmem]",
    "python-dotenv",
]

[tool.uv]
package = false
